// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VideoService.createTwoPassesVideoEncodingArgs (characterization) AV1 branch pinned pass 1 args 1`] = `
[
  "-hide_banner",
  "-y",
  "-hwaccel",
  "auto",
  "-progress",
  "pipe:1",
  "-loglevel",
  "error",
  "-i",
  ""/transcode/42/source.mkv"",
  "-c:v",
  "libvpx-vp9",
  "-g",
  "48",
  "-keyint_min",
  "48",
  "-sc_threshold",
  "0",
  "-crf",
  "30",
  "-maxrate",
  "8000K",
  "-bufsize",
  "16000K",
  "-svtav1-params",
  ""tune=0:enable-overlays=1:film-grain=0:film-grain-denoise=0:scd=1:sharpness=0:enable-qm=1:qm-min=0:enable-variance-boost=1:scm=0:luminance-qp-bias=30:keyint=48"",
  "-map",
  "0:v:0",
  "-vf",
  "scale=-2:1080",
  "-passlogfile",
  ""/transcode/42/source_2pass.log"",
  "-pass",
  "1",
  "-an",
  "-f",
  "null",
  "NUL",
]
`;

exports[`VideoService.createTwoPassesVideoEncodingArgs (characterization) AV1 branch pinned pass 2 args 1`] = `
[
  "-hide_banner",
  "-y",
  "-hwaccel",
  "auto",
  "-progress",
  "pipe:1",
  "-loglevel",
  "error",
  "-i",
  ""/transcode/42/source.mkv"",
  "-c:v",
  "libvpx-vp9",
  "-g",
  "48",
  "-keyint_min",
  "48",
  "-sc_threshold",
  "0",
  "-crf",
  "30",
  "-maxrate",
  "8000K",
  "-bufsize",
  "16000K",
  "-svtav1-params",
  ""tune=0:enable-overlays=1:film-grain=0:film-grain-denoise=0:scd=1:sharpness=0:enable-qm=1:qm-min=0:enable-variance-boost=1:scm=0:luminance-qp-bias=30:keyint=48"",
  "-map",
  "0:v:0",
  "-map_chapters",
  "-1",
  "-vf",
  "scale=-2:1080",
  "-passlogfile",
  ""/transcode/42/source_2pass.log"",
  "-pass",
  "2",
  ""/transcode/42/output_1080.webm"",
]
`;

exports[`VideoService.createTwoPassesVideoEncodingArgs (characterization) H264 branch pinned pass 1 args 1`] = `
[
  "-hide_banner",
  "-y",
  "-hwaccel",
  "auto",
  "-progress",
  "pipe:1",
  "-loglevel",
  "error",
  "-i",
  ""/transcode/42/source.mkv"",
  "-c:v",
  "libvpx-vp9",
  "-g",
  "48",
  "-keyint_min",
  "48",
  "-sc_threshold",
  "0",
  "-crf",
  "23",
  "-maxrate",
  "8000K",
  "-bufsize",
  "16000K",
  "-map",
  "0:v:0",
  "-vf",
  "scale=-2:1080",
  "-passlogfile",
  ""/transcode/42/source_2pass.log"",
  "-pass",
  "1",
  "-an",
  "-f",
  "null",
  "NUL",
]
`;

exports[`VideoService.createTwoPassesVideoEncodingArgs (characterization) H264 branch pinned pass 2 args 1`] = `
[
  "-hide_banner",
  "-y",
  "-hwaccel",
  "auto",
  "-progress",
  "pipe:1",
  "-loglevel",
  "error",
  "-i",
  ""/transcode/42/source.mkv"",
  "-c:v",
  "libvpx-vp9",
  "-g",
  "48",
  "-keyint_min",
  "48",
  "-sc_threshold",
  "0",
  "-crf",
  "23",
  "-maxrate",
  "8000K",
  "-bufsize",
  "16000K",
  "-map",
  "0:v:0",
  "-map_chapters",
  "-1",
  "-vf",
  "scale=-2:1080",
  "-passlogfile",
  ""/transcode/42/source_2pass.log"",
  "-pass",
  "2",
  ""/transcode/42/output_1080.webm"",
]
`;

exports[`VideoService.createTwoPassesVideoEncodingArgs (characterization) URL input branch (UseURLInput = true) pinned pass 1 args (reconnect flags present) 1`] = `
[
  "-hide_banner",
  "-y",
  "-hwaccel",
  "auto",
  "-progress",
  "pipe:1",
  "-loglevel",
  "error",
  "-reconnect",
  "1",
  "-reconnect_on_http_error",
  "400,401,403,408,409,429,5xx",
  "-i",
  ""/transcode/42/source.mkv"",
  "-c:v",
  "libvpx-vp9",
  "-g",
  "48",
  "-keyint_min",
  "48",
  "-sc_threshold",
  "0",
  "-crf",
  "30",
  "-maxrate",
  "8000K",
  "-bufsize",
  "16000K",
  "-map",
  "0:v:0",
  "-vf",
  "scale=-2:1080",
  "-passlogfile",
  ""/transcode/42/source_2pass.log"",
  "-pass",
  "1",
  "-an",
  "-f",
  "null",
  "NUL",
]
`;

exports[`VideoService.createTwoPassesVideoEncodingArgs (characterization) URL input branch (UseURLInput = true) pinned pass 2 args (reconnect flags present) 1`] = `
[
  "-hide_banner",
  "-y",
  "-hwaccel",
  "auto",
  "-progress",
  "pipe:1",
  "-loglevel",
  "error",
  "-reconnect",
  "1",
  "-reconnect_on_http_error",
  "400,401,403,408,409,429,5xx",
  "-i",
  ""/transcode/42/source.mkv"",
  "-c:v",
  "libvpx-vp9",
  "-g",
  "48",
  "-keyint_min",
  "48",
  "-sc_threshold",
  "0",
  "-crf",
  "30",
  "-maxrate",
  "8000K",
  "-bufsize",
  "16000K",
  "-map",
  "0:v:0",
  "-map_chapters",
  "-1",
  "-vf",
  "scale=-2:1080",
  "-passlogfile",
  ""/transcode/42/source_2pass.log"",
  "-pass",
  "2",
  ""/transcode/42/output_1080.webm"",
]
`;

exports[`VideoService.createTwoPassesVideoEncodingArgs (characterization) VP9 (production path) pinned pass 1 args 1`] = `
[
  "-hide_banner",
  "-y",
  "-hwaccel",
  "auto",
  "-progress",
  "pipe:1",
  "-loglevel",
  "error",
  "-i",
  ""/transcode/42/source.mkv"",
  "-c:v",
  "libvpx-vp9",
  "-g",
  "48",
  "-keyint_min",
  "48",
  "-sc_threshold",
  "0",
  "-crf",
  "30",
  "-maxrate",
  "8000K",
  "-bufsize",
  "16000K",
  "-map",
  "0:v:0",
  "-vf",
  "scale=-2:1080",
  "-passlogfile",
  ""/transcode/42/source_2pass.log"",
  "-pass",
  "1",
  "-an",
  "-f",
  "null",
  "NUL",
]
`;

exports[`VideoService.createTwoPassesVideoEncodingArgs (characterization) VP9 (production path) pinned pass 2 args 1`] = `
[
  "-hide_banner",
  "-y",
  "-hwaccel",
  "auto",
  "-progress",
  "pipe:1",
  "-loglevel",
  "error",
  "-i",
  ""/transcode/42/source.mkv"",
  "-c:v",
  "libvpx-vp9",
  "-g",
  "48",
  "-keyint_min",
  "48",
  "-sc_threshold",
  "0",
  "-crf",
  "30",
  "-maxrate",
  "8000K",
  "-bufsize",
  "16000K",
  "-map",
  "0:v:0",
  "-map_chapters",
  "-1",
  "-vf",
  "scale=-2:1080",
  "-passlogfile",
  ""/transcode/42/source_2pass.log"",
  "-pass",
  "2",
  ""/transcode/42/output_1080.webm"",
]
`;

exports[`VideoService.createTwoPassesVideoEncodingArgs (characterization) segment index branch pinned pass 1 args (split-segment passlogfile) 1`] = `
[
  "-hide_banner",
  "-y",
  "-hwaccel",
  "auto",
  "-progress",
  "pipe:1",
  "-loglevel",
  "error",
  "-i",
  ""/transcode/42/source.mkv"",
  "-c:v",
  "libvpx-vp9",
  "-g",
  "48",
  "-keyint_min",
  "48",
  "-sc_threshold",
  "0",
  "-crf",
  "30",
  "-maxrate",
  "8000K",
  "-bufsize",
  "16000K",
  "-map",
  "0:v:0",
  "-vf",
  "scale=-2:1080",
  "-passlogfile",
  ""/transcode/42/segments/source_2pass.log"",
  "-pass",
  "1",
  "-an",
  "-f",
  "null",
  "NUL",
]
`;

exports[`VideoService.createTwoPassesVideoEncodingArgs (characterization) segment index branch pinned pass 2 args (split-segment passlogfile) 1`] = `
[
  "-hide_banner",
  "-y",
  "-hwaccel",
  "auto",
  "-progress",
  "pipe:1",
  "-loglevel",
  "error",
  "-i",
  ""/transcode/42/source.mkv"",
  "-c:v",
  "libvpx-vp9",
  "-g",
  "48",
  "-keyint_min",
  "48",
  "-sc_threshold",
  "0",
  "-crf",
  "30",
  "-maxrate",
  "8000K",
  "-bufsize",
  "16000K",
  "-map",
  "0:v:0",
  "-map_chapters",
  "-1",
  "-vf",
  "scale=-2:1080",
  "-passlogfile",
  ""/transcode/42/segments/source_2pass.log"",
  "-pass",
  "2",
  ""/transcode/42/output_1080.webm"",
]
`;

exports[`VideoService.createTwoPassesVideoEncodingArgs (characterization) split-from / split-duration branch pinned pass 1 args (seek + duration) 1`] = `
[
  "-hide_banner",
  "-y",
  "-hwaccel",
  "auto",
  "-progress",
  "pipe:1",
  "-loglevel",
  "error",
  "-ss",
  "10.5",
  "-i",
  ""/transcode/42/source.mkv"",
  "-t",
  "30",
  "-c:v",
  "libvpx-vp9",
  "-g",
  "48",
  "-keyint_min",
  "48",
  "-sc_threshold",
  "0",
  "-crf",
  "30",
  "-maxrate",
  "8000K",
  "-bufsize",
  "16000K",
  "-map",
  "0:v:0",
  "-vf",
  "scale=-2:1080",
  "-passlogfile",
  ""/transcode/42/source_2pass.log"",
  "-pass",
  "1",
  "-an",
  "-f",
  "null",
  "NUL",
]
`;

exports[`VideoService.createTwoPassesVideoEncodingArgs (characterization) split-from / split-duration branch pinned pass 2 args (seek + duration) 1`] = `
[
  "-hide_banner",
  "-y",
  "-hwaccel",
  "auto",
  "-progress",
  "pipe:1",
  "-loglevel",
  "error",
  "-ss",
  "10.5",
  "-i",
  ""/transcode/42/source.mkv"",
  "-t",
  "30",
  "-c:v",
  "libvpx-vp9",
  "-g",
  "48",
  "-keyint_min",
  "48",
  "-sc_threshold",
  "0",
  "-crf",
  "30",
  "-maxrate",
  "8000K",
  "-bufsize",
  "16000K",
  "-map",
  "0:v:0",
  "-map_chapters",
  "-1",
  "-vf",
  "scale=-2:1080",
  "-passlogfile",
  ""/transcode/42/source_2pass.log"",
  "-pass",
  "2",
  ""/transcode/42/output_1080.webm"",
]
`;
